# MemoryAllocationProfiler

./: .clang-format  .pre-commit-config.yaml  CMakeLists.txt  README  environment.yml  eventlistb.cpp  eventlistb2.cpp  main.cpp  nexusopenclose.cpp  pushback.cpp  pushback_results.txt  results.py  simplevec.cpp  tofevent_classic.cpp  tofevent_int64.cpp
mantid/Kernel/inc/MantidKernel/: DllConfig.h
mantid/Kernel/src/: Memory.cpp
mantid/Types/inc/MantidTypes/: DllConfig.h
mantid/Types/inc/MantidTypes/Core/: DateAndTime.h
mantid/Types/inc/MantidTypes/Event/: TofEventInt64.h
mantid/Types/src/Core/: DateAndTime.cpp  DateAndTimeHelpers.cpp
mantid/Types/src/Event/: TofEvent.cpp  TofEventInt64.cpp
